--- a/Session09/BT6/index.html
+++ b/Session09/BT6/index.html
@@ -1,1 +1,32 @@
-ouiktoiykjhhngbdviyuthfhfgbvvyubi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="./style6.css">
+</head>
+<body>
+    <div class="main">
+        <div class="title">
+            <div>Big</div>
+            <div>Big</div>
+        </div>
+
+        <div class="content">
+            <div>Small 1</div>
+            <div>Small 3</div>
+            <div>Small 5</div>
+            <div>Small 7</div>
+        </div>
+
+        <div class="content">
+            <div>Small 2</div>
+            <div>Small 4</div>
+            <div>Small 6</div>
+            <div>Small 8</div>
+        </div>
+    </div>
+</body>
+</html>
