--- a/Session09/BT4/index.html
+++ b/Session09/BT4/index.html
@@ -1,1 +1,22 @@
-ukmjng bc 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="./style4.css">
+</head>
+<body>
+    <div class="main">
+        <div class="contentA pad">Header</div>
+
+        <div class="contentB">
+            <div class="A pad">Sidebar</div>
+            <div class="B pad">Content</div>
+        </div>
+    
+        <div class="contentC pad">Footer</div>
+    </div>
+</body>
+</html>
