--- a/Session31/BT1/index.html
+++ b/Session31/BT1/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title">JavaScript</h1>
-    
-    <script src="./main.js"></script>
+    <h1 id="title">This is a text</h1>
+    <button onclick="hideText()">Hide text</button>
+    <button onclick="showText()">Show text</button>
+
+    <script src="./main1.js"></script>
 </body>
 </html>
