--- a/Session30/BT2/index.html
+++ b/Session30/BT2/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title">JavaScript</h1>
-    
-    <script src="./main.js"></script>
+    <script src="./main2.js"></script>
 </body>
 </html>
