--- a/Session34/BT4/index.html
+++ b/Session34/BT4/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="todo-container">
-      <h1>To-Do List</h1>
-      <input
-        type="text"
-        id="todo-input"
-        class="todo-input"
-        placeholder="Add a new task"
-      />
+  <div class="main">
+    <h1>Todo List</h1>
+    <div class="style">
+      <input type="text" class="value" placeholder="Thêm việc cần làm...">
       <button id="add-todo" class="todo-button">Add Task</button>
-      <ul id="todo-list" class="todo-list"></ul>
     </div>
+    <div class="content">
+      <!-- <div class="information">
+        <span>cv1</span>
+        <button class="delt" onclick="del()">Xóa</button>
+      </div>
+      <hr>
+    </div> -->
+  </div>
     <script src="./main.js"></script>
 </body>
 </html>
