--- a/Session35/BT3/index.html
+++ b/Session35/BT3/index.html
@@ -15,6 +15,6 @@
     <div class="row row-cols-6">
       <!-- ... -->
     </div>
-    <script src="./main4.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
